cambio de color nav y contacto

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
+    <nav class="navbar navbar-expand-lg ">
         <div class="container">
             <a class="navbar-brand" href="#"><img class="logo" src="./assets/img/logo-fabian.png" alt="Logo-dev"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -192,7 +192,7 @@
             </div>
         </div>
     </section>
-    <section id="contact" class="bg-dark p-3">
+    <section id="contact" class="p-3">
         <div class="container text-center">
             <h2 class="text-center text-light py-4">Contact me</h2>
             <form>
